# legacyzn

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Dashboard.tsx  LandingPage.tsx  LegacyLockModal.tsx  StatusBadge.tsx  WalletProvider.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/assets/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/vault/: page.tsx
frontend/app/hooks/: useLegacyLock.ts  useTokenAssets.ts
frontend/app/lib/: anchor.ts  legacy_lock_program.json
pitch/: LUSDC-Pitch.md
programs/legacy-lock/: Cargo.toml
programs/legacy-lock-common/: Cargo.toml
programs/legacy-lock-common/src/: lib.rs
programs/legacy-lock/src/: errors.rs  events.rs  lib.rs
programs/legacy-lock/src/instructions/: execute.rs  initialize.rs  mod.rs  ping.rs  veto.rs  witness.rs
programs/legacy-lock/src/state/: beneficiary.rs  mod.rs  vault.rs  witness.rs
programs/legacy_lock_hook/: Cargo.toml
programs/legacy_lock_hook/src/: lib.rs
scripts/: create-legacy-token.ts
tests/: legacy-lock.ts
