[package]
name = "legacy-lock-hook"
version = "0.1.0"
description = "Token-2022 Transfer Hook for Legacy Lock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legacy_lock_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
