[package]
name = "legacy-lock-hook"
version = "0.1.0"
description = "Token-2022 Transfer Hook for Legacy Lock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legacy_lock_hook"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = "0.32.1"
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }

